# controllers/Reviews.js
@@ -87,3 +87,13 @@ module.exports.obtenerReviewsPorIdJuego = function obtenerReviewsPorIdJuego (req
       utils.writeJson(res, response);
     });
 };
+
+module.exports.getMetrics = function getMetrics (req, res, next) {
+  Reviews.getMetrics()
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
